[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "beautifulsoup4>=4.13.5",
    "googlesearch-python>=1.3.0",
    "groq>=0.31.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.28",
    "langchain-groq>=0.3.7",
    "langgraph>=0.6.6",
    "pubmed-lib>=0.0.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scholarly>=1.7.11",
    "tavily-python>=0.7.11",
]
